// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a game card in dark mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a hovered game card in dark mode 1`] = `
<div>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-1avmmla"
    >
      <div
        class="css-solwvg"
      />
      <div>
        <h3
          class="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          class="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
      </div>
    </div>
    <div
      class="css-zxiliy"
    >
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-1hlyxwi"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-7icpz4"
          >
            1
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Cities: Skylines
          </div>
          <div
            class="css-k763k9"
          >
            757.35
            h total
            <span
              class="css-16sxbe5"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-1hlyxwi"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-1pi7469"
          >
            2
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            ARK: Survival Evolved
          </div>
          <div
            class="css-k763k9"
          >
            277.83
            h total
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-1hlyxwi"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-1pbijs4"
          >
            3
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            class="css-k763k9"
          >
            200
            h total
            <span
              class="css-16sxbe5"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours:
         
        <span
          class="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average:
         
        <span
          class="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Data Processing filters out games with zero playtime 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Data Processing renders correctly with sample data 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Edge Cases handles single game scenario 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        1
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        757.4
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        757.4
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when games is null 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-16q7rgc"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when games is undefined 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-16q7rgc"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when no games provided 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-16q7rgc"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a game card in light mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a hovered game card in light mode 1`] = `
<div>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-1avmmla"
    >
      <div
        class="css-solwvg"
      />
      <div>
        <h3
          class="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          class="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
      </div>
    </div>
    <div
      class="css-zxiliy"
    >
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-1hlyxwi"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-7icpz4"
          >
            1
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Cities: Skylines
          </div>
          <div
            class="css-k763k9"
          >
            757.35
            h total
            <span
              class="css-16sxbe5"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-1hlyxwi"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-1pi7469"
          >
            2
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            ARK: Survival Evolved
          </div>
          <div
            class="css-k763k9"
          >
            277.83
            h total
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-1hlyxwi"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-1pbijs4"
          >
            3
          </div>
          <div
            class="css-11nufqa"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            class="css-k763k9"
          >
            200
            h total
            <span
              class="css-16sxbe5"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours:
         
        <span
          class="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average:
         
        <span
          class="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Loading State renders loading state correctly 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-nyc2gr"
  >
    <div
      className="css-1omu3y4"
    />
    <p
      className="css-1ylq8j3"
    >
      Loading Gaming Library...
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Theme Integration adapts to dark mode styling 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Theme Integration renders correctly in light mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1avmmla"
  >
    <div
      className="css-solwvg"
    />
    <div>
      <h3
        className="css-15kivef"
      >
        Gaming Library
      </h3>
      <p
        className="css-14xu9f5"
      >
        Top 
        3
         Most Played Games
      </p>
    </div>
  </div>
  <div
    className="css-zxiliy"
  >
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="Cities: Skylines header"
          className="css-1hlyxwi"
          src="https://example.com/cities-header.jpg"
        />
        <div
          className="css-7icpz4"
        >
          1
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          Cities: Skylines
        </div>
        <div
          className="css-k763k9"
        >
          757.35
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            2h
             recently
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="ARK: Survival Evolved header"
          className="css-1hlyxwi"
          src="https://example.com/ark-header.jpg"
        />
        <div
          className="css-1pi7469"
        >
          2
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          ARK: Survival Evolved
        </div>
        <div
          className="css-k763k9"
        >
          277.83
          h total
        </div>
      </div>
    </div>
    <div
      className="css-xsvu8c"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-w24l45"
      >
        <img
          alt="PUBG: BATTLEGROUNDS header"
          className="css-1hlyxwi"
          src="https://example.com/pubg-header.jpg"
        />
        <div
          className="css-1pbijs4"
        >
          3
        </div>
        <div
          className="css-11nufqa"
        />
      </div>
      <div
        className="css-rr301l"
      >
        <div
          className="css-rkrxe3"
        >
          PUBG: BATTLEGROUNDS
        </div>
        <div
          className="css-k763k9"
        >
          200
          h total
          <span
            className="css-16sxbe5"
          >
            • 
            1h
             recently
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-rcbrnq"
  >
    <div
      className="css-aq86v7"
    >
      Total Hours:
       
      <span
        className="css-xdug5y"
      >
        1235.2
        h
      </span>
    </div>
    <div
      className="css-aq86v7"
    >
      Average:
       
      <span
        className="css-xdug5y"
      >
        411.7
        h per game
      </span>
    </div>
  </div>
</div>
`;
